--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 <body>
     <header></header>
 
-    <main>
-        <h1>Eleve seu negócio digital a outro nível<strong> com um Front-end 
+    <main class="principalApresentacao">
+        <h1>Eleve seu negócio digital a outro nível<strong class="tituloDestaque"> com um Front-end 
             de qualidade!</strong></h1>
 
         <p>Olá! Sou Italo Miranda, desenvolvedor Front-end com especialidade em
             HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias.
             Vamos conversar?</p>    
+
+        <img src="italoImg.jpg" alt="Foto Do Italo">
         
         <a href="https://www.instagram.com/italo_m20/">Instagram</a>
         <a href="https://github.com/Ital023">GitHub</a>            
