--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong class="tituloDestaque"> com um Front-end 
                 de qualidade!</strong></h1>
 
-            <p class="apresentacao__conteudo_texto">Olá! Sou Italo Miranda, desenvolvedor Front-end com especialidade em
+            <p class="apresentacao__conteudo__texto">Olá! Sou Italo Miranda, desenvolvedor Front-end com especialidade em
                 HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias.
                 Vamos conversar?</p> 
-            <a href="https://www.instagram.com/italo_m20/">Instagram</a>
-            <a href="https://github.com/Ital023">GitHub</a>     
+            <div class="apresentacao__links">
+                <a class="apresentacao__links__link" href="https://www.instagram.com/italo_m20/">Instagram</a>
+                <a class="apresentacao__links__link" href="https://github.com/Ital023">GitHub</a>
+            </div>
+                 
         </section>
         <img src="italoImg.jpg" alt="Foto Do Italo">
         
